# mj_viser

./: .gitignore  README.md  pyproject.toml
examples/: basic_launch.py  custom_panel.py  gui_demo.py  sync_mode.py  viewer_demo.py
src/mj_viser/: __init__.py  geom_builders.py  gui.py  mesh_utils.py  panels.py  scene.py  sensor_panel.py  teleop_panel.py  transforms.py  viewer.py
tests/: test_mesh_utils.py  test_transforms.py
