[project]
name = "mj-viser"
version = "0.1.0"
description = "Web-based MuJoCo viewer using Viser"
license = "MIT"
authors = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "mujoco>=3.0",
    "viser>=0.2.0",
    "numpy",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/personalrobotics/mj_viser"
Repository = "https://github.com/personalrobotics/mj_viser"
Issues = "https://github.com/personalrobotics/mj_viser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mj_viser"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/mj_viser/__init__.py" = ["F401"]

[tool.mypy]
strict = true
